[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://Components/TextHandlerComponent.gd" id="1_mqxie"]
[ext_resource type="Theme" path="res://Assets/ACE_Theme.tres" id="2_gig7a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aqjlp"]

[node name="Description" type="HBoxContainer" node_paths=PackedStringArray("empty_space", "edit", "rich_text")]
offset_right = 1152.0
offset_bottom = 43.0
script = ExtResource("1_mqxie")
block_type = "DESCRIPTION"
is_formattable = true
empty_space = NodePath("EmptySpace")
edit = NodePath("Edit")
rich_text = NodePath("RichText")

[node name="EmptySpace" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.219608, 0.219608, 0.219608, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_aqjlp")
text = "  "

[node name="Bullet" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.219608, 0.219608, 0.219608, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_aqjlp")
text = "     â€¢"

[node name="Edit" type="TextEdit" parent="."]
visible = false
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
theme = ExtResource("2_gig7a")
theme_override_constants/line_spacing = 0
placeholder_text = "Description"
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true
caret_multiple = false

[node name="RichText" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
mouse_default_cursor_shape = 1
theme = ExtResource("2_gig7a")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
bbcode_enabled = true
text = "asd"
fit_content = true

[connection signal="focus_entered" from="Edit" to="." method="_on_edit_focus_entered"]
[connection signal="focus_exited" from="Edit" to="." method="_on_edit_focus_exited"]
[connection signal="focus_entered" from="RichText" to="." method="focus_on_edit"]
